<resources>
    <string name="app_name">TaskKeeperAndAnalyzer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_and_account">don\'t have an account?</string>
    <string name="please_visit_your_gmail_and_click_the_link_we_have_sent_during_registration">Please visit your Gmail and click the link we have sent during registration</string>
    <string name="open_gmail">open Gmail</string>
    <string name="dismiss">dismiss</string>
    <string name="task_keeper_amp_analyzer"><![CDATA[Task  Analyzer]]></string>
    <string name="submit">Submit</string>
    <string name="please_enter_the_email_address_your_registered_with_we_will_send_you_an_email_to_reset_your_password">Please enter the email address your registered with we will send you an email to reset your password</string>
    <string name="change_password">Change Password?</string>
    <string name="please_enter_your_current_password">Please enter your current password.</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="authenticate">Authenticate</string>
    <string name="edit_profile">edit profile</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="change_passwords">Change Password</string>
    <string name="task_keeper_and_analyzer">Task Keeper And Analyzer</string>
    <string name="add_task">add task</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="task_type">task type</string>
    <string name="schedule_a_remainder_time">schedule notification time</string>
    <string name="gym_remainder">Gym remainder</string>
    <string name="developer_events">Developer events</string>
    <string name="android_session">Android session</string>
    <string name="interview_remainder">Interview remainder</string>
    <string name="note_taking">Note taking</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="due_time">due date:</string>
</resources>