<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addTask.AddTaskFragment">


    <TextView
        android:id="@+id/taskType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/task_type"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/remainderTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/schedule_a_remainder_time"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvDesc"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_title"
            android:drawablePadding="6dp"
            android:fontFamily="monospace"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvDesc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:drawableStart="@drawable/ic_note_add_24"
            android:drawablePadding="6dp"
            android:fontFamily="monospace"
            android:hint="@string/description"
            android:maxLines="3"
            android:inputType="textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:scaleX="0.7"
            android:scaleY="0.7" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:calendarViewShown="false"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:timePickerMode="spinner" />


    </LinearLayout>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="3dp"
        app:layout_constraintEnd_toEndOf="@+id/tvDesc"
        app:layout_constraintStart_toStartOf="@+id/tvDesc"
        app:layout_constraintTop_toBottomOf="@+id/taskType">

                <RadioButton
                    android:id="@+id/gymRemainder"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:text="@string/gym_remainder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/developerEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:text="@string/developer_events"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/androidSessions"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:text="@string/android_session"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gymRemainder" />

                <RadioButton
                    android:id="@+id/interview"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:text="@string/interview_remainder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/developerEvent" />


                <RadioButton
                    android:id="@+id/noteTaking"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:text="@string/note_taking"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/androidSessions" />



    </RadioGroup>


    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/add_task"
        app:layout_constraintEnd_toEndOf="@+id/tvDesc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvDesc"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>