<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.login.LoginFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_mail"
            android:drawablePadding="6dp"
            android:fontFamily="monospace"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="@id/tvLogin"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintTop_toBottomOf="@id/tvLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_lock"
            android:drawablePadding="6dp"
            android:fontFamily="monospace"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="monospace"
        android:text="@string/forgot_password"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/tvPassword"
        app:layout_constraintTop_toBottomOf="@id/tvPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/tvPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLogin">

        <TextView
            android:id="@+id/DoNotHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="5dp"
            android:text="@string/don_t_have_and_account" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textSize="18sp"
            android:padding="5dp"
            android:text="@string/register"
            android:textStyle="bold" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>