<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.password.changePassword.currentPassword.CurrentPasswordFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordDecTv"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_lock"
            android:drawablePadding="6dp"
            android:fontFamily="monospace"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnAuthenticate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/authenticate"
        app:layout_constraintEnd_toEndOf="@+id/tvPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <TextView
        android:id="@+id/passwordRestTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordDecTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/please_enter_your_current_password"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvPassword"
        app:layout_constraintStart_toStartOf="@+id/tvPassword"
        app:layout_constraintTop_toBottomOf="@id/passwordRestTv" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnAuthenticate"
        app:layout_constraintEnd_toEndOf="@+id/btnAuthenticate"
        app:layout_constraintStart_toStartOf="@+id/btnAuthenticate"
        app:layout_constraintTop_toTopOf="@+id/btnAuthenticate" />



</androidx.constraintlayout.widget.ConstraintLayout>