<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.register.RegisterFragment">



    <TextView
        android:id="@+id/registerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_person"
            android:drawablePadding="6dp"
            android:fontFamily="monospace"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvEmailAddress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_mail"
            android:drawablePadding="6dp"
            android:fontFamily="monospace"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/tvEmailAddress"
        app:layout_constraintStart_toStartOf="@id/tvEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tvEmailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_lock"
            android:drawablePadding="6dp"
            android:fontFamily="monospace"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:passwordToggleEnabled="true"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@id/tvPassword"
        app:layout_constraintStart_toStartOf="@id/tvPassword"
        app:layout_constraintTop_toBottomOf="@id/tvPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_lock"
            android:drawablePadding="6dp"
            android:fontFamily="monospace"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/termsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/tvConfirmPassword"
        app:layout_constraintStart_toStartOf="@id/tvConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword">

        <CheckBox
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="5dp"
            android:text="@string/i_agree_to_the_terms_and_conditions" />
    </LinearLayout>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/tvConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/tvConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/termsLayout" />




    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="@id/btnRegister"
        app:layout_constraintTop_toBottomOf="@id/btnRegister">

        <TextView
            android:id="@+id/DoNotHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="5dp"
            android:text="@string/already_have_an_account" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="5dp"
            android:textSize="18sp"
            android:text="@string/login"
            android:textStyle="bold" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="410dp"
        android:layout_height="129dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="410dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="57dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_task_keeper_splash"
                    app:layout_constraintVertical_bias="0.507" />

                <TextView
                    android:id="@+id/decTv"
                    android:layout_marginStart="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_keeper_amp_analyzer"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>